Added placeholders for the angular modules that will be built

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link href="css/font-awesome.css" rel="stylesheet"/>
     <script src-="js/jquery-2.1.4.js"></script>
     <script src="js/angular.js"></script>
+    <script src="ext-modules/menu/menuModule.js"></script>
+    <script src="ext-modules/dashboard/dashboardModule.js"></script>
+    <script src="ext-modules/framework/frameworkModule.js"></script>
+    <script src="app/appModule.js"></script>
 </head>
 <body>
 
