--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
@@ -12,7 +12,7 @@
     <script src="ext-modules/framework/frameworkModule.js"></script>
     <script src="app/appModule.js"></script>
 </head>
-<body>
-
+<body class="container-fluid">
+    <framework> </framework>
 </body>
 </html>
