--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <link href="css/bootstrap.css" rel="stylesheet"/>
     <link href="css/font-awesome.css" rel="stylesheet"/>
-    <script src-="js/jquery-2.1.4.js"></script>
+    <script src="js/jquery-2.1.4.js"></script>
     <script src="js/angular.js"></script>
     <script src="ext-modules/menu/menuModule.js"></script>
     <script src="ext-modules/dashboard/dashboardModule.js"></script>
