Realized why the template wasn't showing. The frameworkController.js and frameworkDirective.js weren't included in the scripts on the index.html. Duh.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="ext-modules/menu/menuModule.js"></script>
     <script src="ext-modules/dashboard/dashboardModule.js"></script>
     <script src="ext-modules/framework/frameworkModule.js"></script>
+    <script src="ext-modules/framework/frameworkController.js"></script>
+    <script src="ext-modules/framework/frameworkDirective.js"></script>
     <script src="app/appModule.js"></script>
 </head>
 <body class="container-fluid">
